redis cache immplementation has been added

--- a/.config
+++ b/.config
@@ -9,3 +9,9 @@ MAX_PROPOSED_LEN=10
 # image 
 PERMITTED_IMAGE_EXTS="jpeg,jpg,png"
 IMAGE_SIZE_STUB=100
+
+# Cache configuration
+
+#redis
+
+REDIS_PASSWORD="REDIS_PASSWORD"
