--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "discogs-client (>=2.3.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "pydantic (>=2.12.5,<3.0.0)",
+    "redis (>=7.2.0,<8.0.0)",
 ]
 
 [tool.poetry]
